tests/ui/attributes/attr-bad-crate-attr.stderr
error: expected item after attributes
  --> $DIR/attr-bad-crate-attr.rs:7:1
   |
LL | #[attr = "val"] // Unterminated
   | ^^^^^^^^^^^^^^^ expected an item after this

error: aborting due to 1 previous error

